target-path-changed

--- a/analyzer.ipynb
+++ b/analyzer.ipynb
@@ -132,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "root_folder = r'G:\\DL_enigma\\Bowling-Analyzer\\Data'\n",
+    "root_folder = r'\\Data'\n",
     "# players = ['Jasprit_Bumrah', 'Jofra_Archer', 'Mark_Wood', 'Mitchell_Starc', 'Shaun_Tait']\n",
     "players = ['Mitchell Starc']\n",
     "\n",
